// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render secondary button 1`] = `
.c0 {
  padding: 11px 5px;
  border: 1px solid #002B56;
  border-radius: 2px;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0.85px;
  -moz-letter-spacing: 0.85px;
  -ms-letter-spacing: 0.85px;
  letter-spacing: 0.85px;
  text-transform: uppercase;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  cursor: pointer;
  color: #002B56;
  background-color: #FFF;
}

.c0:hover {
  background-color: #F2F2F2;
}

@media (min-width:758px) {
  .c0 {
    padding: 16px 5px;
    font-size: 14px;
    -webkit-letter-spacing: 1px;
    -moz-letter-spacing: 1px;
    -ms-letter-spacing: 1px;
    letter-spacing: 1px;
  }
}

<button
  className="c0"
  disabled={false}
  type="button"
>
  Click me!
</button>
`;

exports[`Button should render without failing 1`] = `
.c0 {
  padding: 11px 5px;
  border: 1px solid #002B56;
  border-radius: 2px;
  font-size: 12px;
  line-height: 16px;
  -webkit-letter-spacing: 0.85px;
  -moz-letter-spacing: 0.85px;
  -ms-letter-spacing: 0.85px;
  letter-spacing: 0.85px;
  text-transform: uppercase;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  cursor: pointer;
  color: #FFF;
  background-color: #002B56;
}

@media (min-width:758px) {
  .c0 {
    padding: 16px 5px;
    font-size: 14px;
    -webkit-letter-spacing: 1px;
    -moz-letter-spacing: 1px;
    -ms-letter-spacing: 1px;
    letter-spacing: 1px;
  }
}

<button
  className="c0"
  disabled={false}
  type="button"
>
  Click me!
</button>
`;
